// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async AuthenticationActions confirmation when confirmation fails 1`] = `
Array [
  Object {
    "error": "Invalid credentials",
    "type": "CONFIRMATION_FAILURE",
  },
]
`;

exports[`async AuthenticationActions confirmation when confirmation is successful 1`] = `
Array [
  Object {
    "type": "CONFIRMATION_SUCCESS",
    "user": Object {
      "email": "email@email.com",
      "id": 1,
    },
  },
  Object {
    "data": Object {
      "id": "CONFIRMATION_MODAL",
    },
    "type": "HIDE_MODAL",
  },
]
`;

exports[`async AuthenticationActions login when login fails 1`] = `
Array [
  Object {
    "error": "Invalid credentials",
    "type": "AUTHENTICATE_FAILURE",
  },
]
`;

exports[`async AuthenticationActions login when login is successful 1`] = `
Array [
  Object {
    "type": "AUTHENTICATE_SUCCESS",
    "user": Object {
      "id": 1,
      "name": "name",
    },
  },
  Object {
    "data": Object {
      "id": "LOGIN_MODAL",
    },
    "type": "HIDE_MODAL",
  },
]
`;

exports[`async AuthenticationActions register when registration fails 1`] = `
Array [
  Object {
    "error": Object {
      "email": "Has already been taken",
    },
    "type": "REGISTER_FAILURE",
  },
]
`;

exports[`async AuthenticationActions register when registration is successful 1`] = `
Array [
  Object {
    "type": "REGISTER_SUCCESS",
    "user": Object {
      "email": "email@email.com",
      "id": 1,
      "name": "Bob",
    },
  },
  Object {
    "id": "AUTHENTICATION",
    "notification": Object {
      "level": "success",
      "message": undefined,
    },
    "type": "NOTIFY_SUCCESS",
  },
  Object {
    "data": Object {
      "id": "REGISTRATION_MODAL",
    },
    "type": "HIDE_MODAL",
  },
  Object {
    "data": Object {
      "id": "CONFIRMATION_MODAL",
    },
    "type": "SHOW_MODAL",
  },
]
`;

exports[`async AuthenticationActions resendConfirmation when confirmation fails 1`] = `
Array [
  Object {
    "error": "Invalid credentials",
    "type": "RESEND_CONFIRMATION_FAILURE",
  },
]
`;

exports[`async AuthenticationActions resendConfirmation when resendConfirmation is successful 1`] = `
Array [
  Object {
    "id": "AUTHENTICATION",
    "notification": Object {
      "level": "success",
      "message": "Success",
    },
    "type": "NOTIFY_SUCCESS",
  },
  Object {
    "data": Object {
      "id": "RESEND_CONFIRMATION_MODAL",
    },
    "type": "HIDE_MODAL",
  },
  Object {
    "data": Object {
      "id": "CONFIRMATION_MODAL",
    },
    "type": "SHOW_MODAL",
  },
]
`;
